Page MenuHome GnuPG

gpgtar's "--files-from" should also handle a LF terminated list of file names.
Closed, ResolvedPublic

Description

Well hello there.

As a way of circumventing WinXP's command prompt's inability to handle wildcards when working with GnuPG, I figured I'd try "gpgtar --create (--encrypt or what have you) --files-from foo.txt" instead, but all it does is output a couple of rather cryptic error messages:

gpgtar: --files-from and --null may only be used in conjunction
gpgtar: --files-from only supports argument "-"

Surely I tried typing in the whole address for the text file (with and without quotes), different combination of line endings and positions for the arguments, and even "-" in places that common sense tells me would have never worked anyways, but to no avail.

Now I'm not saying this is necessarily a bug; but if it isn't, please let this be a request for clearer documentation on this particular feature.

Thanks a bunch.

Details

Version
2.2.21

Event Timeline

werner added a subscriber: werner.

It is indeed a limitation. We added these options to support the Kleopatra GUI. To avoid problems with filenames with embedded newlines etc. Kleoptra uses a binary nuls to delimit filenames. And that is what we only support.

werner renamed this task from Unable to use "--files-from" to gpgtar's "--files-from" should also handle a LF terminated list of file names..Aug 18 2020, 11:57 AM
werner triaged this task as Normal priority.
werner edited projects, added Feature Request, gnupg (gpg22); removed Bug Report.
werner changed the task status from Open to Testing.Aug 20 2020, 3:56 PM

The options now work as documented. More tests on Window are required and eventually we need to handle non-ascii characters in file names.

Excellent! thanks for having considered this.

If there are any binaries out for testing, I'd be more than happy to help.

Best regards.

Unicode file names will now also work - see T4083 and T5030